--- a/pages/content-api/authentication.mdx
+++ b/pages/content-api/authentication.mdx
@@ -44,7 +44,7 @@ curl -X POST \\
   </Tabs.Tab>
 
 <Tabs.Tab>
-```jsx copy
+```typescript copy copy
 // Fetch API
 fetch('<https://graphql.unbody.io>', {
     method: 'POST',
