--- a/pages/content-api/q-n-a.mdx
+++ b/pages/content-api/q-n-a.mdx
@@ -20,7 +20,7 @@ Here's how to structure your queries using the `ask{}` operator in both GraphQL 
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 <collectionName>(
@@ -63,7 +63,7 @@ Here's how to structure your queries using the `ask{}` operator in both GraphQL 
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 TextDocument(
@@ -96,7 +96,7 @@ Both the JavaScript SDK and GraphQL responses for an `ask{}` query include detai
 
 <Tabs size={"sm"} variant={"underlined"} className={"mt-2"}>
     <Tab title={"SDK (.ts)"}>
-        ```typescript
+        ```typescript copy
         {
             "title": "2001: A Space Odyssey",
             "answer": {
@@ -111,7 +111,7 @@ Both the JavaScript SDK and GraphQL responses for an `ask{}` query include detai
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```typescript
+        ```typescript copy
         {
             "data": {
                 "Get": {
