--- a/pages/content-api/query-methods/get.mdx
+++ b/pages/content-api/query-methods/get.mdx
@@ -39,7 +39,7 @@ await unbody.get
 </Tabs>
 
 <Collapse title="Expected response">
-```typescript
+```typescript copy
 {
   "data": {
     "Get": {
@@ -99,7 +99,7 @@ unbody.get
 
 
 <Collapse title="Expected response">
-```typescript
+```typescript copy
 {
   "data": {
     "Get": {
