--- a/pages/content-api/search/hybrid-search.mdx
+++ b/pages/content-api/search/hybrid-search.mdx
@@ -22,7 +22,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
     ```
 </Tab>
 <Tab title={"GraphQL"}>
-    ```graphql
+    ```graphql copy
     query{
       Get{
         <collectionName>(
@@ -54,7 +54,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
     ```
 </Tab>
 <Tab title={"GraphQL"}>
-    ```graphql
+    ```graphql copy
     query{
       Get{
         GoogleDoc(
@@ -83,7 +83,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-    ```graphql
+    ```graphql copy
     query{
       Get{
         DiscordMessage(
@@ -113,7 +113,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
         ```
     </Tab>
     <Tab title={"GraphQl"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             TextBlock(
@@ -144,7 +144,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
         ```
     </Tab>
     <Tab title={"GraphQl"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 GoogleDoc(
