--- a/pages/content-api/search/keyword-search.mdx
+++ b/pages/content-api/search/keyword-search.mdx
@@ -20,7 +20,7 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             <collectionName>(
@@ -51,7 +51,7 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             GoogleDoc(
@@ -80,7 +80,7 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             TextBlock(
@@ -110,7 +110,7 @@ Keyword search can be operated on an  any object's `string` or `string[]` field.
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             GoogleDoc(
