--- a/pages/content-api/search/record-similarity.mdx
+++ b/pages/content-api/search/record-similarity.mdx
@@ -20,7 +20,7 @@ Similarity search can be performed on any object. Here's how:
     </Tab>
     <Tab title={"GraphQL"}>
 
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 <collectionName>(
@@ -56,7 +56,7 @@ Find Google Docs that are similar to a specific Google Doc.
     </Tab>
     <Tab title={"GraphQL"}>
 
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 GoogleDoc(
@@ -86,7 +86,7 @@ Find Google Docs that are similar to a specific Google Doc.
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 DiscordMessage(
@@ -114,7 +114,7 @@ Find Google Docs that are similar to a specific Google Doc.
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 TextBlock(
