--- a/pages/content-api/search/semantic-search.mdx
+++ b/pages/content-api/search/semantic-search.mdx
@@ -20,7 +20,7 @@ You can perform semantic searches on virtually any text (`string`) field of any 
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             <collectionName>(
@@ -52,7 +52,7 @@ You can perform semantic searches on virtually any text (`string`) field of any 
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             GoogleDoc(
@@ -80,7 +80,7 @@ You can perform semantic searches on virtually any text (`string`) field of any 
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             DiscordMessage(
@@ -109,7 +109,7 @@ You can perform semantic searches on virtually any text (`string`) field of any 
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             TextBlock(
@@ -167,7 +167,7 @@ For example, let's' consider you’re searching for articles related to web deve
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query{
           Get{
             TextDocument(
@@ -204,7 +204,7 @@ If you have access to custom words or document vectors, **`nearVector`** allows 
         ```
     </Tab>
     <Tab title={"GraphQl"}>
-        ```graphql
+        ```graphql copy
         query {
           Get {
             TextDocument(
@@ -244,7 +244,7 @@ You can also apply [filters](/content-api/filters) to your semantic search queri
         ```
     </Tab>
     <Tab title={"GraphQl"}>
-        ```graphql
+        ```graphql copy
         query {
           Get {
             TextDocument(
