--- a/pages/content-api/search/visual-similarity.mdx
+++ b/pages/content-api/search/visual-similarity.mdx
@@ -18,7 +18,7 @@ Visual similarity search can be performed on any `imageBlock`. Here's how:
         ```
     </Tab>
     <Tab title="GraphQL">
-        ```graphql
+        ```graphql copy
         query{
           Get{
             ImageBlock(
@@ -51,7 +51,7 @@ Visual similarity search can be performed on any `imageBlock`. Here's how:
         ```
     </Tab>
     <Tab title="GraphQL">
-        ```graphql
+        ```graphql copy
         query{
           Get{
             ImageBlock(
