--- a/pages/enhancement/image-metadata-extraction-pipeline.mdx
+++ b/pages/enhancement/image-metadata-extraction-pipeline.mdx
@@ -100,7 +100,7 @@ console.log(payload)
 
 <Collapse title="Response">
 
-```typescript
+```typescript copy
 [
     {
         "originalName": "sample.jpg",
