--- a/pages/generative-and-rag/multimodal-rag-using-generative-search.mdx
+++ b/pages/generative-and-rag/multimodal-rag-using-generative-search.mdx
@@ -154,7 +154,7 @@ Need to analyze multiple images while considering their metadata, OCR text, and 
 </Tabs>
 
 <Collapse title="Response">
-```typescript
+```typescript copy
 {
     "from": [
         {
