--- a/pages/project-configurations/enhancers.mdx
+++ b/pages/project-configurations/enhancers.mdx
@@ -32,7 +32,7 @@ To enable enhancers:
 1. Navigate to the **Dashboard** and enable them under the **Enhancers** section.
 2. Alternatively, configure them using the **Admin API**.
 
-```jsx
+```typescript copy
 import { UnbodyAdmin, ProjectSettings, AutoSummary, AutoKeywords } from 'unbody/admin'
 
 // Initialize the Admin API
