--- a/pages/video-api.mdx
+++ b/pages/video-api.mdx
@@ -217,7 +217,7 @@ query {
 </Tabs>
 
 <Collapse title="Expected response">
-```typescript
+```typescript copy copy
 [
   {
       "end": "00:00:03.560",
