--- a/pages/content-api/generative.mdx
+++ b/pages/content-api/generative.mdx
@@ -20,7 +20,7 @@ For instance, if your data includes various historical events, users can simply 
     ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get{
                 <ObjectName> {
@@ -60,7 +60,7 @@ This method generates a result for each object based on a single prompt. You can
 ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 TextDocument {
@@ -99,7 +99,7 @@ This method generates a result by applying a single prompt to a group of objects
         ```
     </Tab>
     <Tab title={"GraphQL"}>
-        ```graphql
+        ```graphql copy
         query {
             Get {
                 TextDocument{
