--- a/pages/data-ingestion/push-api.mdx
+++ b/pages/data-ingestion/push-api.mdx
@@ -11,7 +11,7 @@ The `unbody/push` package provides an easy-to-use interface to manually upload f
 
 The Push API requires three credentials for authentication:
 
-```typescript
+```typescript copy
 import { UnbodyPushAPI } from '@unbody-io/push-api'
 
 const pushApi = new UnbodyPushAPI({
