--- a/pages/prompting/use-the-image-inside-a-prompt.mdx
+++ b/pages/prompting/use-the-image-inside-a-prompt.mdx
@@ -8,7 +8,7 @@ Generate content by providing images as input through messages. The system can a
 ## Basic Image Generation
 Use images as input to generate descriptions or analyze visual content by providing image URLs.
 
-```typescript
+```typescript copy
     const {
       data: { payload },
     } = await unbody.generate
@@ -35,7 +35,7 @@ Use images as input to generate descriptions or analyze visual content by provid
     ```
 
 <Collapse title="Response">
-```typescript
+```typescript copy
 
 {
     "content": "This image depicts a futuristic electric car being charged at a charging station. The scene is set at night with a vibrant, neon-lit color palette, predominantly featuring blues and oranges. The car is sleek and modern, with illuminated tail lights and a visible energy flow highlighted in blue to indicate charging. The background suggests a serene, remote location with trees silhouetted against the night sky. The image has a dynamic and slightly mysterious atmosphere, enhanced by the ambient lighting and the subtle presence of rain.",
